# search

./: CMakeLists.txt
search-algorithm/: CMakeLists.txt  min-distance.cpp
search-algorithm/include/: search.hpp
search-algorithm/src/: search.cpp
search-manager/: main.cpp  search.cpp
